[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/GameplayScene.gd" type="Script" id=1]
[ext_resource path="res://GameObjects/TurnRightCommandObject.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameObjects/TurnLeftCommandObject.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameObjects/ShipObject.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameObjects/CommandExecutePoint.tscn" type="PackedScene" id=5]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[node name="Gameplay" type="Node" index="0"]

script = ExtResource( 1 )
Right_commands = ExtResource( 2 )
Left_commands = ExtResource( 3 )
max_command_buffer = 15
velocity = 100
max_command_frame_counter = 45

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "default"

[node name="Ship" parent="." index="1" instance=ExtResource( 4 )]

position = Vector2( 432.017, 235.128 )

[node name="CommandStartPoint" type="Position2D" parent="." index="2"]

position = Vector2( 97.0007, 440 )
_sections_unfolded = [ "Transform" ]

[node name="CommandExecutePoint" parent="." index="3" instance=ExtResource( 5 )]

position = Vector2( 700, 440 )
_sections_unfolded = [ "Transform" ]

[connection signal="call_left" from="CommandExecutePoint" to="." method="force_ship_turn_left"]

[connection signal="call_right" from="CommandExecutePoint" to="." method="force_ship_turn_right"]


